Fix logo misalignment, bump to 0.1.2

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -220,7 +220,7 @@ h6 {
 }
 
 .c-site-logo {
-  padding: 0 1.5rem 0;
+  padding: 0 2rem 0;
   margin: 0;
   a { text-decoration: none; color: inherit; }
 }
